fixed scrollbar in profile page for friends

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -56,6 +56,7 @@
   width: 70px;
   height: 35px;
   text-align: center;
+  margin-right: 20px;
 }
 
 .btn-visit-profile:hover{
